WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
93610
[V8] V8Utilities::throwTypeMismatchException() should use setDOMException()
https://bugs.webkit.org/show_bug.cgi?id=93610
Summary
[V8] V8Utilities::throwTypeMismatchException() should use setDOMException()
Kentaro Hara
Reported
2012-08-09 05:23:16 PDT
Given that V8Utilities::throwTypeMismatchException() throws a DOM exception, we should use setDOMException() instead of throwError().
Attachments
Patch
(2.39 KB, patch)
2012-08-09 05:26 PDT
,
Kentaro Hara
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
patch for landing
(2.65 KB, patch)
2012-08-09 16:48 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-08-09 05:26:37 PDT
Created
attachment 157446
[details]
Patch
Adam Barth
Comment 2
2012-08-09 09:46:46 PDT
Comment on
attachment 157446
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=157446&action=review
> Source/WebCore/bindings/v8/V8Utilities.cpp:197 > -void throwTypeMismatchException(v8::Isolate* isolate) > +void setTypeMismatchException(v8::Isolate* isolate) > { > - V8Proxy::throwError(V8Proxy::GeneralError, "TYPE_MISMATCH_ERR: DOM Exception 17", isolate); > + V8Proxy::setDOMException(TYPE_MISMATCH_ERR, isolate); > }
Presumably we should just inline this function into it's one caller.
WebKit Review Bot
Comment 3
2012-08-09 10:44:32 PDT
Comment on
attachment 157446
[details]
Patch
Attachment 157446
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/13460593
Kentaro Hara
Comment 4
2012-08-09 14:52:14 PDT
(In reply to
comment #2
)
> > +void setTypeMismatchException(v8::Isolate* isolate) > > { > > - V8Proxy::throwError(V8Proxy::GeneralError, "TYPE_MISMATCH_ERR: DOM Exception 17", isolate); > > + V8Proxy::setDOMException(TYPE_MISMATCH_ERR, isolate); > > } > > Presumably we should just inline this function into it's one caller.
I tried it but it's not easy to resolve circular dependency. V8Proxy.h includes V8Utilities.h. So V8Utilities.h cannot call V8Proxy::xxx().
Kentaro Hara
Comment 5
2012-08-09 16:48:39 PDT
Created
attachment 157579
[details]
patch for landing
WebKit Review Bot
Comment 6
2012-08-09 19:14:10 PDT
Comment on
attachment 157579
[details]
patch for landing Clearing flags on attachment: 157579 Committed
r125236
: <
http://trac.webkit.org/changeset/125236
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug