[V8] V8Utilities::throwTypeMismatchException() should use setDOMException() https://bugs.webkit.org/show_bug.cgi?id=93610

Reviewed by Adam Barth.

Given that V8Utilities::throwTypeMismatchException() throws a DOM exception,
we should use setDOMException() instead of throwError().

This patch also renames throwTypeMismatchException() to setTypeMismatchException().

No tests. I couldn't figure out how to trigger the call path.
Either way this is just a minor change of error message.

* bindings/v8/V8Utilities.cpp:
(WebCore::setTypeMismatchException):
* bindings/v8/V8Utilities.h:
(WebCore::createFunctionOnlyCallback):


Canonical link: https://commits.webkit.org/111523@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@125236 268f45cc-cd09-0410-ab3c-d52691b4dbfc